--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -3,17 +3,17 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  cursor: url('../../public/magnifying-glass-solid.svg'), auto ;
+  cursor: url('../../public/magnifying-glass-solid.svg'), auto;
 }
 
 .home {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensure the container fills the viewport height */
+  min-height: 100vh;
   position: relative;
 }
 
-.background-video {
+.backgroundVideo {
   position: absolute;
   top: 0;
   left: 0;
@@ -26,10 +26,9 @@ html, body {
 .overlay {
   position: relative;
   z-index: 1;
-  flex: 1; /* Allow it to take the available space and push the footer to the bottom */
+  flex: 1;
 }
 
-/* Transparent Black Overlay */
 .home::before {
   content: "";
   position: absolute;
@@ -37,32 +36,34 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3); 
-  z-index: 0; 
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 0;
 }
 
 .navbar {
   padding: 0.8rem 0rem;
 }
-.navbar .container{
+
+.navbar .container {
   max-width: 100%;
 }
-.navbar-collapse .navbar-nav{
-  /* background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity))!important; */
-  position:relative;
+
+.navbar-collapse .navbar-nav {
+  position: relative;
 }
 
-.navbar-brand .logo-img {
+.navbarBrandImg {
   height: 50px;
 }
-.nav-item{
+
+.navItem {
   position: relative;
   padding-left: 0.5em;
   font: normal normal normal 20px/24px Roboto;
   padding-right: 0.5em;
 }
 
-.nav-link{
+.navLink {
   color: #fffffff2 !important;
 }
 
@@ -74,18 +75,12 @@ html, body {
   color: #ffffff !important;
 }
 
-.hero-image {
-  width: 80%;
-  border-radius: 50%;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .wordart {
   font-family: 'Brush Script MT', cursive;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.hero-video {
+.heroVideo {
   width: 100%;
   max-width: 600px;
   height: auto;
@@ -93,11 +88,7 @@ html, body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* .journey {
-  background: #1a1a1a;
-} */
-
-.journey-title {
+.journeyTitle {
   font-size: 2.5rem;
   color: #f8f9fa;
 }
@@ -141,12 +132,11 @@ footer a:hover {
     font-size: 1.5rem;
   }
 
-  .hero-video {
+  .heroVideo {
     width: 100%;
   }
 
   .step {
     margin-bottom: 2rem;
   }
-
 }
